# numfield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
doc/: advanced_tutorials.ipynb  getting_started.ipynb  tutorials.ipynb
numfield/: __init__.py  examples.py  fields.py  mesh.py  plotting.py  projection.py  utils.py
tests/: conftest.py  test_examples.py  test_fields.py  test_mesh.py  test_notebooks.py  test_plot.py  test_projection.py
